--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "restangular": "^1.5.2",
     "font-awesome": "fontawesome#^4.6.3",
     "bootstrap-social": "^5.0.0",
-    "satellizer": "~0.14.0"
+    "satellizer": "~0.14.0",
+    "ngmap": "~1.17.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.5"
