--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project was created to study MEAN STACK",
   "main": "server.js",
   "scripts": {
-    "test": "karma start config/karma.conf.js"
+    "test": "karma start config/karma.conf.js",
+    "start": "SET NODE_ENV=dev && node server.js"
   },
   "repository": {
     "type": "git",
@@ -43,13 +44,10 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-sinon-chai": "^1.2.0",
-    "mocha": "^2.4.5",
-    "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0"
+    "mocha": "^3.0.2",
+    "sinon": "^1.17.5",
+    "sinon-as-promised": "^4.0.2",
+    "sinon-mongoose": "^1.3.0",
+    "supertest": "^2.0.0"
   }
 }
